FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20160525:
AUTHOR: mat@FreeBSD.org

  A new stage-qa test has been added, it reports all shared libraries
  dependencies that are not part of the port list of dependencies.  It help
  finds what is called proxy dependencies.

  A is needed by B, and B is needed by C.  If C also needs A, then it needs to
  be registered, and this check will tell you to do so.

  Right now, it is only reporting the problems, but if you add
  PROXYDEPS_FATAL=yes to your environment, it will give an error and will force
  you to fix the dependencies.

20160525:
AUTHOR: bapt@FreeBSD.org

  New keyword @xmlcatmgr has been added, to handle the XML and SGML catalog
  maintainance, in order to improve consistency and correctness of the
  generation of the catalog.
  If the catalog file has an extension being '.xml' it will be automatically
  added to the XML catalog, otherwise it will be added to the SGML catalog

20160512:
AUTHOR: emaste@FreeBSD.org

  "make makesum" now writes the current timestamp to distinfo when it is run.
  This is done to support development and prototyping efforts for reproducible
  package builds, which require some concept of a "last updated" time.

  The TIMESTAMP can currently be ignored for ports that have no distinfo, and
  for updates done without using "make makesum."

20160428
AUTHOR: mat@FreeBSD.org

  USE_RUBYGEMS has been replaced by USES=gem.

20160426:
AUTHOR: mat@FreeBSD.org

  USE_MYSQL and USE_BDB have been replaced by USES=mysql and USES=bdb.

  WANT_BDB_VER=XX should be replaced by USES=bdb:XX.

20160414:
AUTHOR: mat@FreeBSD.org

  USE_RC_SUBR=yes has not done anything for a long time, it will now give an error.

20160413: