@@ -98,6 +98,10 @@
 # ${opt}_CMAKE_OFF		When option is disabled, it will add its content to
 #				the CMAKE_ARGS.
 #
+# ${opt}_CMAKE_BOOL		Will add to CMAKE_ARGS:
+#				Option enabled  -D${content}:BOOL=true
+#				Option disabled -D${content}:BOOL=false
+#
 # ${opt}_QMAKE_ON		When option is enabled, it will add its content to
 #				the QMAKE_ARGS.
 # ${opt}_QMAKE_OFF		When option is disabled, it will add its content to
@@ -515,6 +519,9 @@ CONFIGURE_ARGS+=	${${opt}_CONFIGURE_ENABLE:S/^/--enable-/}
 .    if defined(${opt}_CONFIGURE_WITH)
 CONFIGURE_ARGS+=	${${opt}_CONFIGURE_WITH:S/^/--with-/}
 .    endif
+.    if defined(${opt}_CMAKE_BOOL)
+CMAKE_ARGS+=		${${opt}_CMAKE_BOOL:C/.*/-D&:BOOL=true/}
+.    endif
 .    for configure in CONFIGURE CMAKE QMAKE
 .      if defined(${opt}_${configure}_ON)
 ${configure}_ARGS+=	${${opt}_${configure}_ON}
@@ -558,6 +565,9 @@ CONFIGURE_ARGS+=	${${opt}_CONFIGURE_ENABLE:S/^/--disable-/:C/=.*//}
 .    endif
 .    if defined(${opt}_CONFIGURE_WITH)
 CONFIGURE_ARGS+=	${${opt}_CONFIGURE_WITH:S/^/--without-/:C/=.*//}
+.    endif
+.    if defined(${opt}_CMAKE_BOOL)
+CMAKE_ARGS+=		${${opt}_CMAKE_BOOL:C/.*/-D&:BOOL=false/}
 .    endif
 .    for configure in CONFIGURE CMAKE QMAKE
 .      if defined(${opt}_${configure}_OFF)
